--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "docs": "typedoc --options typedoc.json",
     "lint": "tslint --project tsconfig.json src/**/*.ts --fix",
-    "test": "jest"
+    "test": "jest --config jest.config.ts"
   },
   "browserslist": {
     "production": [
