--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
-        "rootDir": "./",
-        "rootDirs": ["src", "__tests__", "__examples__"],
+        "rootDir": "./src",
         "baseUrl": "./",
         "paths": {
             "@/*": ["src/*"],
@@ -23,7 +22,6 @@
         "skipLibCheck": true
     },
     "include": [
-        "src/**/*.ts",
-        "__tests__/**/*.ts"
+        "src/**/*.ts"
     ]
 }
