--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "microdot",
   "version": "0.0.1",
+  "description": "Decentralized Micro-services Architecture",
+  "main": "dist/index.js",
   "private": false,
   "type": "module",
   "module": "./src/index.ts",
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "29.5.12",
     "@types/node": "22.5.1",
@@ -14,33 +17,48 @@
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^9.9.1",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
+    "jest": "^27.0.6",
+    "supertest": "^6.1.3",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "typedoc-plugin-coverage": "^3.4.1",
     "typedoc-plugin-extras": "^4.0.0",
     "typedoc-plugin-inline-sources": "^1.2.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.3.0"
+    "typescript": "^4.3.5",
+    "typescript-eslint": "^8.3.0",
+    "tslint": "^6.1.3",
+    "typedoc": "^0.21.9"
   },
   "dependencies": {
-    "@types/cors": "^2.8.17",
     "crypto": "^1.0.1",
     "did-jwt": "^8.0.4",
     "did-resolver": "^4.1.0",
     "ethr-did-resolver": "^11.0.2",
     "sequelize": "^6.37.5",
-    "tslint": "^6.1.3",
-    "typedoc": "^0.27.6",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "express": "^4.17.1",
+    "react": "^17.0.2"
   },
   "scripts": {
-    "docs": "typedoc --options typedoc.json",
-    "lint": "tslint --project tsconfig.json src/**/*.ts --fix",
-    "test": "jest --config jest.config.ts",
-    "build": "tsc"
+    "docs": "typedoc --out docs src",
+    "lint": "tslint -p tsconfig.json",
+    "test": "jest",
+    "build": "tsc",
+    "build:dev": "tsc --project tsconfig.json",
+    "build:prod": "tsc --project tsconfig.prod.json",
+    "publish": "npm publish"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pocketminers/microdot.git"
+  },
+  "keywords": [
+    "microservices",
+    "decentralized",
+    "architecture"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "browserslist": {
     "production": [
       ">0.2%",
