--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@types/text-encoding": "^0.0.39",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "eslint": "^9.9.1",
-    "jest": "^27.0.6",
-    "supertest": "^6.1.3",
+    "eslint": "^9.17.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "typedoc-plugin-coverage": "^3.4.1",
@@ -36,8 +36,7 @@
     "ethr-did-resolver": "^11.0.2",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.3",
-    "express": "^4.17.1",
-    "react": "^17.0.2"
+    "express": "^4.17.1"
   },
   "scripts": {
     "docs": "typedoc --out docs src",
