--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,10 @@
         "paths": {
             "@/*": ["src/*"],
             "@tests/*": ["__tests__/*"],
-            "@examples/*": ["__examples__/*"],
             "@artifacts/*": ["src/artifacts/*"],
             "@utils/*": ["src/utils/*"]
         },
-        "outDir": "./build/",
+        "outDir": "./build",
         "target": "ES2022",
         "module": "ES2022",
         "moduleResolution": "node",
