--- a/package.json
+++ b/package.json
@@ -1,55 +1,61 @@
 {
-  "name": "microdot",
-  "version": "0.0.1",
+  "name": "@pocketminers/microdot",
+  "version": "0.0.1-test25",
   "description": "Decentralized Micro-services Architecture",
-  "main": "dist/index.js",
+  "main": "index.ts",
   "private": false,
   "type": "module",
-  "module": "./src/index.ts",
+  "module": "src/index.ts",
+  "files": [
+    "src/**/*",
+    "README.md",
+    "LICENSE",
+    "index.js",
+    "package.json",
+    "tsconfig.json"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/cors": "^2.8.17",
-    "@types/eslint__js": "^8.42.3",
-    "@types/jest": "29.5.12",
-    "@types/node": "22.5.1",
+    "@types/express": "^5.0.0",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.10.5",
     "@types/supertest": "^6.0.2",
-    "@types/text-encoding": "^0.0.39",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
-    "eslint": "^9.17.0",
+    "@types/text-encoding": "^0.0.40",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
+    "tslint": "^6.1.3",
+    "typedoc": "^0.27.6",
     "typedoc-plugin-coverage": "^3.4.1",
     "typedoc-plugin-extras": "^4.0.0",
     "typedoc-plugin-inline-sources": "^1.2.0",
-    "typescript": "^4.3.5",
-    "typescript-eslint": "^8.3.0",
-    "tslint": "^6.1.3",
-    "typedoc": "^0.21.9"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "crypto": "^1.0.1",
     "did-jwt": "^8.0.4",
     "did-resolver": "^4.1.0",
     "ethr-did-resolver": "^11.0.2",
+    "express": "^4.17.1",
     "sequelize": "^6.37.5",
-    "uuid": "^11.0.3",
-    "express": "^4.17.1"
+    "uuid": "^11.0.5"
   },
   "scripts": {
     "docs": "typedoc --out docs src",
     "lint": "tslint -p tsconfig.json",
     "test": "jest",
     "build": "tsc",
-    "build:dev": "tsc --project tsconfig.json",
-    "build:prod": "tsc --project tsconfig.prod.json",
     "publish": "npm publish"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pocketminers/microdot.git"
+    "url": "git+https://github.com/pocketminers/microdot.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "microservices",
@@ -69,5 +75,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "exlude": [
+    "node_modules",
+    "__coverage__",
+    "__docs__",
+    "__tests__"
+  ]
 }
