--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
     "compilerOptions": {
-        "rootDir": "./",
+        "rootDir": "./src",
         "baseUrl": "./",
         "paths": {
             "@/*": ["src/*"],
-            "@tests/*": ["__tests__/*"],
             "@artifacts/*": ["src/artifacts/*"],
             "@utils/*": ["src/utils/*"]
         },
-        "outDir": "./build",
+        "outDir": "./dist",
         "target": "ES2022",
         "module": "ES2022",
         "moduleResolution": "node",
@@ -18,15 +17,17 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "declarationMap": true,
+        "declaration": true
     },
     "include": [
-        "src/**/*.ts",
-        "__tests__/**/*.ts"
+        "src/**/*.ts"
     ],
     "exclude": [
         "node_modules",
         "dist",
-        "build"
+        "__coverage__",
+        "__docs__"
     ]
 }
