--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "private": false,
   "type": "module",
-  "module": "src/index.ts",
+  "module": "./",
   "files": [
     "src/**/*",
     "README.md",
@@ -26,12 +26,14 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
+    "tsc-alias": "^1.8.10",
     "tslint": "^6.1.3",
     "typedoc": "^0.27.6",
     "typedoc-plugin-coverage": "^3.4.1",
     "typedoc-plugin-extras": "^4.0.0",
     "typedoc-plugin-inline-sources": "^1.2.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-transform-paths": "^3.5.3"
   },
   "dependencies": {
     "crypto": "^1.0.1",
@@ -45,8 +47,8 @@
   "scripts": {
     "docs": "typedoc",
     "lint": "tslint -p tsconfig.json",
-    "test": "jest",
-    "build": "tsc",
+    "test": "jest -c jest.config.js",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "publish": "npm publish"
   },
   "repository": {
@@ -62,7 +64,7 @@
     "decentralized",
     "architecture"
   ],
-  "author": "Your Name",
+  "author": "Pocket Labs LLC",
   "license": "MIT",
   "browserslist": {
     "production": [
@@ -78,8 +80,11 @@
   },
   "exlude": [
     "node_modules",
+    "docs",
     "__coverage__",
-    "__docs__",
     "__tests__"
+  ],
+  "include": [
+    "src"
   ]
 }
