--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pocketminers/microdot",
-  "version": "0.0.1-test33",
+  "version": "0.0.2-test34",
   "description": "Decentralized Micro-services Architecture",
   "main": "dist/cjs/index.js",
   "types": "dist/esm/index.d.ts",
@@ -51,9 +51,10 @@
     "docs": "typedoc",
     "lint": "tslint -p tsconfig.json",
     "test": "jest -c jest.config.js",
-    "build:cjs": "tsc --project tsconfig.cjs.json && tsc-alias -p tsconfig.json",
-    "build:esm": "tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.json",
-    "build:browser": "tsc --project tsconfig.browser.json && tsc-alias -p tsconfig.json",
+    "clean": "rm -rf dist",
+    "build:cjs": "tsc --project tsconfig.cjs.json && tsc-alias -p tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
+    "build:browser": "tsc --project tsconfig.browser.json && tsc-alias -p tsconfig.browser.json",
     "build": "yarn build:cjs && yarn build:esm && yarn build:browser",
     "publish": "npm publish"
   },
