Add configuration class with methods for property management; include source maps for ESM, CJS, and browser distributions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pocketminers/microdot",
-  "version": "0.0.1-test35",
+  "version": "0.0.1-test41",
   "description": "Decentralized Micro-services Architecture",
   "main": "dist/cjs/index.js",
   "types": "dist/esm/index.d.ts",
@@ -16,8 +16,16 @@
     "package.json",
     "tsconfig.json"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "browser": "./dist/browser/index.js",
+      "types": "./dist/esm/index.d.ts"
+    },
+    "./package.json": "./package.json"
+  },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "29.5.14",
@@ -61,10 +69,13 @@
     "type": "git",
     "url": "git+https://github.com/pocketminers/microdot.git"
   },
+  "homepage": "https://github.com/pocketminers/microdot#readme",
   "publishConfig": {
     "access": "public",
     "registry": "https://npm.pkg.github.com/"
   },
+  "unpkg": "dist/browser/index.js",
+  "jsdelivr": "dist/browser/index.js",
   "keywords": [
     "microservices",
     "decentralized",
