--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -4,6 +4,7 @@
     "outDir": "./dist/browser",
     "target": "ES5",
     "module": "ES2022",
-    "lib": ["DOM", "ES5", "ES2015"]
+    "lib": ["DOM", "ES5", "ES2015"],
+    "downlevelIteration": true,
   }
 }
