--- a/package.json
+++ b/package.json
@@ -26,22 +26,25 @@
     "./package.json": "./package.json"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.5",
     "@types/supertest": "^6.0.2",
     "@types/text-encoding": "^0.0.40",
+    "eslint": "^9.18.0",
     "jest": "^29.7.0",
+    "jiti": "^2.4.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "tsc-alias": "^1.8.10",
-    "tslint": "^6.1.3",
     "typedoc": "^0.27.6",
     "typedoc-plugin-coverage": "^3.4.1",
     "typedoc-plugin-extras": "^4.0.0",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
     "typescript-transform-paths": "^3.5.3"
   },
   "dependencies": {
@@ -55,7 +58,7 @@
   },
   "scripts": {
     "docs": "typedoc",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint src",
     "test": "jest -c jest.config.js",
     "clean": "rm -rf dist",
     "build:cjs": "tsc --project tsconfig.cjs.json && tsc-alias -p tsconfig.cjs.json",
